@@ -34,8 +34,8 @@ def get_rich_root_format():
     if format.repository_format.rich_root_data:
         return format
     # Default format does not support rich root data, 
-    # fall back to dirstate-with-subtree
-    format = format_registry.make_bzrdir('dirstate-with-subtree')
+    # fall back to rich-root
+    format = format_registry.make_bzrdir('rich-root')
     assert format.repository_format.rich_root_data
     return format
 
